Se creó la página de productos

--- a/siasoft/nosotros.html
+++ b/siasoft/nosotros.html
@@ -24,9 +24,9 @@
 
       <div class="menu">
         <ul>
-          <li><a href="#">Quienes somos</a></li>
+          <li><a href="nosotros.html">Quienes somos</a></li>
           <li><a href="#">Directorio</a></li>
-          <li><a href="#">Productos</a></li>
+          <li><a href="productos.html">Productos</a></li>
           <li><a href="#">Contactos</a></li>
           <li><a href="#">Descargas</a></li>
           <li><a href="#">soporte</a></li>
