Se modificó el footer de los cards de cada producto

--- a/siasoft/productos.html
+++ b/siasoft/productos.html
@@ -52,6 +52,8 @@
             <div class="card-body">
               <h5 class="card-title">SIMUN Sistema integral Armonizado Contablemente</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+            </div>
+            <div class="card-footer">
               <a class="btn btn-block btn-outline-primary" href="#!">Ver</a>
             </div>
           </div>
@@ -61,6 +63,8 @@
             <div class="card-body">
               <h5 class="card-title">SISAP Sistema Integral Pyme</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+            </div>
+            <div class="card-footer">
               <a class="btn btn-block btn-outline-success" href="#!">Ver</a>
             </div>
           </div>
@@ -70,6 +74,8 @@
             <div class="card-body">
               <h5 class="card-title">SICOES Sistema de control escolar </h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+            </div>
+            <div class="card-footer">
               <a class="btn btn-block btn-outline-danger" href="#!">Ver</a>
             </div>
           </div>
@@ -79,6 +85,8 @@
             <div class="card-body">
               <h5 class="card-title">SIACOFFEE</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+            </div>
+            <div class="card-footer">
               <a class="btn btn-block btn-outline-info" href="#!">Ver</a>
             </div>
           </div>          
@@ -89,6 +97,8 @@
           <div class="card-body">
             <h5 class="card-title">DESAROLLOS ALA MEDIDA</h5>
             <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+          </div>
+          <div class="card-footer">
             <a class="btn btn-block btn-outline-dark" href="#!">Ver</a>
           </div>
         </div>
