--- a/siasoft/productos.html
+++ b/siasoft/productos.html
@@ -48,7 +48,7 @@
         <div class="card-deck">
           <!-- Producto 1 -->
           <div class="card border border-primary">
-            <img class="card-img-top" src="imgs/producto1.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/simun.png" alt="SIMUN Sistema integral Armonizado Contablemente" title="SIMUN Sistema integral Armonizado Contablemente" />
             <div class="card-body">
               <h5 class="card-title">SIMUN Sistema integral Armonizado Contablemente</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -59,7 +59,7 @@
           </div>
           <!-- Producto 2 -->
           <div class="card border border-success">
-            <img class="card-img-top" src="imgs/producto2.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/isisap.png" alt="SISAP Sistema Integral Pyme" title="SISAP Sistema Integral Pyme" />
             <div class="card-body">
               <h5 class="card-title">SISAP Sistema Integral Pyme</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -70,9 +70,9 @@
           </div>
           <!-- Producto 3 -->
           <div class="card border border-danger">
-            <img class="card-img-top" src="imgs/producto3.png" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/sicoes.jpeg" alt="SICOES Sistema de control escolar" title="SICOES Sistema de control escolar" />
             <div class="card-body">
-              <h5 class="card-title">SICOES Sistema de control escolar </h5>
+              <h5 class="card-title">SICOES Sistema de control escolar</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
             </div>
             <div class="card-footer">
@@ -81,7 +81,7 @@
           </div>
           <!-- Producto 4 -->
           <div class="card border border-info">
-            <img class="card-img-top" src="imgs/producto4.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/siacoffee_prod3.jpg" alt="SIACOFFEE" title="SIACOFFEE" />
             <div class="card-body">
               <h5 class="card-title">SIACOFFEE</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -93,7 +93,7 @@
         </div>
         <!-- Producto 5 -->
         <div id="last_item" class="card border border-dark">
-          <img class="card-img-top" src="imgs/producto5.png" alt="Producto 1" />
+          <img class="card-img-top" src="imgs/intro8.jpeg" alt="DESAROLLOS ALA MEDIDA" title="DESAROLLOS ALA MEDIDA" />
           <div class="card-body">
             <h5 class="card-title">DESAROLLOS ALA MEDIDA</h5>
             <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
