--- a/siasoft/productos.html
+++ b/siasoft/productos.html
@@ -7,35 +7,36 @@
     <title>SiaSoft | Nuestros productos</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" /> 
-    <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/productos.css" />
   </head>
   <body>
     
     <!-- Barra de navegación principal -->
-    <nav>
-      <div class="menu-icon">
-        <i class="fa fa-bars fa-2x"></i>
-      </div>
+     <nav>
 
-      <div class="logo">
-        <img src="imgs/logo.png" height="75px" width="80px">
-      </div>
+                        <div class="menu-icon">
+                              <i class="fa fa-bars fa-2x"></i>
+                        </div>
+                  
+                        <div class="logo">
+                            <img src="imgs/logo.png" height="75px" width="80px">
+                        </div>
 
-      <div class="menu">
-        <ul>
-          <li><a href="nosotros.html">Quienes somos</a></li>
-          <li><a href="#">Directorio</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="#">Contactos</a></li>
-          <li><a href="#">Descargas</a></li>
-          <li><a href="#">soporte</a></li>
-          <li><a href="#">ver intro</a></li>
-          <li><a href="#" style="color:#F6FC09">sessión</a></li>
-          <li><a href="#" style="color:#F6FC09">buzon</a></li>
-        </ul>
-      </div>
-    </nav>
+                        <div class="menu">
+                              <ul>
+                                    <li><a href="#">Quienes somos</a></li>
+                                    <li><a href="#">Directorio</a></li>
+                                    <li><a href="#">Productos</a></li>
+                                    <li><a href="#">Contactanos</a></li>
+                                   <li><a href="#">Descargas</a></li>
+                                   <li><a href="#">soporte</a></li>
+                                  <li><a href="#">intro</a></li>
+                                  <li><a href="#" style="color:#F6FC09">Entrar</a></li>
+                                  <li><a href="#" style="color:#F6FC09">buzon</a></li>
+                              </ul>
+                        </div>
+                  </nav>
 
     <!-- Contenedor principal -->
     <div class="container">
@@ -48,7 +49,7 @@
         <div class="card-deck">
           <!-- Producto 1 -->
           <div class="card border border-primary">
-            <img class="card-img-top" src="imgs/simun.png" alt="SIMUN Sistema integral Armonizado Contablemente" title="SIMUN Sistema integral Armonizado Contablemente" />
+            <img class="card-img-top" src="imgs/producto1.jpg" alt="Producto 1" />
             <div class="card-body">
               <h5 class="card-title">SIMUN Sistema integral Armonizado Contablemente</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -59,7 +60,7 @@
           </div>
           <!-- Producto 2 -->
           <div class="card border border-success">
-            <img class="card-img-top" src="imgs/isisap.png" alt="SISAP Sistema Integral Pyme" title="SISAP Sistema Integral Pyme" />
+            <img class="card-img-top" src="imgs/producto2.jpg" alt="Producto 1" />
             <div class="card-body">
               <h5 class="card-title">SISAP Sistema Integral Pyme</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -70,9 +71,9 @@
           </div>
           <!-- Producto 3 -->
           <div class="card border border-danger">
-            <img class="card-img-top" src="imgs/sicoes.jpeg" alt="SICOES Sistema de control escolar" title="SICOES Sistema de control escolar" />
+            <img class="card-img-top" src="imgs/producto3.png" alt="Producto 1" />
             <div class="card-body">
-              <h5 class="card-title">SICOES Sistema de control escolar</h5>
+              <h5 class="card-title">SICOES Sistema de control escolar </h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
             </div>
             <div class="card-footer">
@@ -81,7 +82,7 @@
           </div>
           <!-- Producto 4 -->
           <div class="card border border-info">
-            <img class="card-img-top" src="imgs/siacoffee_prod3.jpg" alt="SIACOFFEE" title="SIACOFFEE" />
+            <img class="card-img-top" src="imgs/producto4.jpg" alt="Producto 1" />
             <div class="card-body">
               <h5 class="card-title">SIACOFFEE</h5>
               <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
@@ -93,7 +94,7 @@
         </div>
         <!-- Producto 5 -->
         <div id="last_item" class="card border border-dark">
-          <img class="card-img-top" src="imgs/intro8.jpeg" alt="DESAROLLOS ALA MEDIDA" title="DESAROLLOS ALA MEDIDA" />
+          <img class="card-img-top" src="imgs/producto5.png" alt="Producto 1" />
           <div class="card-body">
             <h5 class="card-title">DESAROLLOS ALA MEDIDA</h5>
             <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
