Se crearon las páginas individuales de cada producto además de la página de descargas

--- a/siasoft/nosotros.html
+++ b/siasoft/nosotros.html
@@ -15,28 +15,29 @@
     <!-- Barra de navegación principal -->
       <nav>
 
-                        <div class="menu-icon">
-                              <i class="fa fa-bars fa-2x"></i>
-                        </div>
-                  
-                        <div class="logo">
-                            <img src="imgs/logo.png" height="75px" width="80px">
-                        </div>
+        <div class="menu-icon">
+              <i class="fa fa-bars fa-2x"></i>
+        </div>
+  
+        <div class="logo">
+            <img src="imgs/logo.png" height="75px" width="80px">
+        </div>
 
-                        <div class="menu">
-                              <ul>
-                                    <li><a href="#">Quienes somos</a></li>
-                                    <li><a href="#">Directorio</a></li>
-                                    <li><a href="#">Productos</a></li>
-                                    <li><a href="#">Contactanos</a></li>
-                                   <li><a href="#">Descargas</a></li>
-                                   <li><a href="#">soporte</a></li>
-                                  <li><a href="#">intro</a></li>
-                                  <li><a href="#" style="color:#F6FC09">Entrar</a></li>
-                                  <li><a href="#" style="color:#F6FC09">buzon</a></li>
-                              </ul>
-                        </div>
-                  </nav>
+        <div class="menu">
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="nosotros.html">Quienes somos</a></li>
+            <li><a href="directorio.html">Directorio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="descargas.html">Descargas</a></li>
+            <li><a href="#">soporte</a></li>
+            <li><a href="#">intro</a></li>
+            <li><a href="#" style="color:#F6FC09">Entrar</a></li>
+            <li><a href="#" style="color:#F6FC09">buzon</a></li>
+          </ul>
+        </div>
+      </nav>
 
     <div class="bg-image">
       <h2>SiaSoft</h2>
