--- a/siasoft/productos.html
+++ b/siasoft/productos.html
@@ -15,28 +15,29 @@
     <!-- Barra de navegación principal -->
      <nav>
 
-                        <div class="menu-icon">
-                              <i class="fa fa-bars fa-2x"></i>
-                        </div>
-                  
-                        <div class="logo">
-                            <img src="imgs/logo.png" height="75px" width="80px">
-                        </div>
+        <div class="menu-icon">
+              <i class="fa fa-bars fa-2x"></i>
+        </div>
+  
+        <div class="logo">
+            <img src="imgs/logo.png" height="75px" width="80px">
+        </div>
 
-                        <div class="menu">
-                              <ul>
-                                    <li><a href="#">Quienes somos</a></li>
-                                    <li><a href="#">Directorio</a></li>
-                                    <li><a href="#">Productos</a></li>
-                                    <li><a href="#">Contactanos</a></li>
-                                   <li><a href="#">Descargas</a></li>
-                                   <li><a href="#">soporte</a></li>
-                                  <li><a href="#">intro</a></li>
-                                  <li><a href="#" style="color:#F6FC09">Entrar</a></li>
-                                  <li><a href="#" style="color:#F6FC09">buzon</a></li>
-                              </ul>
-                        </div>
-                  </nav>
+        <div class="menu">
+          <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="nosotros.html">Quienes somos</a></li>
+            <li><a href="directorio.html">Directorio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="contactanos.html">Contactanos</a></li>
+            <li><a href="descargas.html">Descargas</a></li>
+            <li><a href="#">soporte</a></li>
+            <li><a href="#">intro</a></li>
+            <li><a href="#" style="color:#F6FC09">Entrar</a></li>
+            <li><a href="#" style="color:#F6FC09">buzon</a></li>
+          </ul>
+        </div>
+    </nav>
 
     <!-- Contenedor principal -->
     <div class="container">
@@ -49,58 +50,54 @@
         <div class="card-deck">
           <!-- Producto 1 -->
           <div class="card border border-primary">
-            <img class="card-img-top" src="imgs/producto1.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/simun.png" alt="SIMUN Sistema integral Armonizado Contablemente" title="SIMUN Sistema integral Armonizado Contablemente" />
             <div class="card-body">
               <h5 class="card-title">SIMUN Sistema integral Armonizado Contablemente</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+              <!-- <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p> -->
             </div>
             <div class="card-footer">
-              <a class="btn btn-block btn-outline-primary" href="#!">Ver</a>
+              <a class="btn btn-block btn-outline-primary" href="simun.html">Ver</a>
             </div>
           </div>
           <!-- Producto 2 -->
           <div class="card border border-success">
-            <img class="card-img-top" src="imgs/producto2.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/isisap.png" alt="SISAP Sistema Integral Pyme" title="SISAP Sistema Integral Pyme" />
             <div class="card-body">
               <h5 class="card-title">SISAP Sistema Integral Pyme</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block btn-outline-success" href="#!">Ver</a>
+              <a class="btn btn-block btn-outline-success" href="sisap.html">Ver</a>
             </div>
           </div>
           <!-- Producto 3 -->
           <div class="card border border-danger">
-            <img class="card-img-top" src="imgs/producto3.png" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/sicoes.jpeg" alt="SICOES Sistema de control escolar" title="SICOES Sistema de control escolar" />
             <div class="card-body">
-              <h5 class="card-title">SICOES Sistema de control escolar </h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+              <h5 class="card-title">SICOES Sistema de control escolar</h5>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block btn-outline-danger" href="#!">Ver</a>
+              <a class="btn btn-block btn-outline-danger" href="sicoes.html">Ver</a>
             </div>
           </div>
           <!-- Producto 4 -->
           <div class="card border border-info">
-            <img class="card-img-top" src="imgs/producto4.jpg" alt="Producto 1" />
+            <img class="card-img-top" src="imgs/siacoffee_prod3.jpg" alt="SIACOFFEE" title="SIACOFFEE" />
             <div class="card-body">
               <h5 class="card-title">SIACOFFEE</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-block btn-outline-info" href="#!">Ver</a>
+              <a class="btn btn-block btn-outline-info" href="siacoffee.html">Ver</a>
             </div>
           </div>          
         </div>
         <!-- Producto 5 -->
         <div id="last_item" class="card border border-dark">
-          <img class="card-img-top" src="imgs/producto5.png" alt="Producto 1" />
+          <img class="card-img-top" src="imgs/dev_final.jpg" alt="DESAROLLOS A LA MEDIDA" title="DESAROLLOS A LA MEDIDA" />
           <div class="card-body">
-            <h5 class="card-title">DESAROLLOS ALA MEDIDA</h5>
-            <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas at, rerum laboriosam minus eos soluta nobis, pariatur</p>
+            <h5 class="card-title">DESAROLLOS A LA MEDIDA</h5>
           </div>
           <div class="card-footer">
-            <a class="btn btn-block btn-outline-dark" href="#!">Ver</a>
+            <a class="btn btn-block btn-outline-dark" href="desarrollo.html">Ver</a>
           </div>
         </div>
       </div>
