Se agregaron los nuevos enlaces en la barra de navegación y se creó la página de soporte

--- a/siasoft/descargas.html
+++ b/siasoft/descargas.html
@@ -36,8 +36,8 @@
             <li><a href="productos.html">Productos</a></li>
             <li><a href="contactanos.html">Contactanos</a></li>
             <li><a href="descargas.html">Descargas</a></li>
-            <li><a href="#">soporte</a></li>
-            <li><a href="#">intro</a></li>
+            <li><a href="soporte.html">soporte</a></li>
+            <li><a href="intro.html">intro</a></li>
             <li><a href="#" style="color:#F6FC09">Entrar</a></li>
             <li><a href="#" style="color:#F6FC09">buzon</a></li>
           </ul>
