--- a/siasoft/soporte.html
+++ b/siasoft/soporte.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SiaSoft | SIACOFFEE</title>
+    <title>SiaSoft | Soporte</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet" /> 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/producto.css" />
+    <style>
+      #divLinks a {
+        display: block;
+        margin-bottom: 5px;
+      }
+    </style>
   </head>
   <body>
     
@@ -44,26 +50,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12" id="main_content">
-          <h1 class="text-center">SIACOFFEE</h1>
-          <!-- Imagen del producto -->
-          <img class="img-fluid" src="imgs/siacoffee_prod3.jpg" alt="SIACOFFEE" title="SIACOFFEE" />
+          <h1 class="text-center">Puede descargar la versión del cliente de Teamviewer desde nuestra web</h1>
+          <img class="img-fluid" src="imgs/imgsoporte.jpg" alt="Cliente de teamviewer" title="Cliente de teamviewer" />
         </div>
-
-        <!-- Título de características -->
-        <div id="features" class="col-sm-12 col-md-12 col-lg-12">
-          <h2>Características</h2>          
+        <div id="divLinks" class="col-sm-12 col-md-12 col-lg-12 mt-5">
+          <!-- Enlaces de descarga -->
+          <a class="text-center" href="#!">Siasoft cliente Teamviewer</a>
+          <a class="text-center" href="#!">Teamviewer Oficial</a>
         </div>
-
-        <!-- Características del producto -->
-        <div class="col-sm-12 col-md-5 col-lg-5 offset-md-1 offset-lg-1">
-          <ul class="list-unstyled">
-            <li><i class="fab fa-elementor"></i> Restaurantes</li>
-            <li><i class="fab fa-elementor"></i> Comandas</li>
-            <li><i class="fab fa-elementor"></i> Costo por platillo</li>
-            <li><i class="fab fa-elementor"></i> Ventas a domicilio</li>
-            <li><i class="fab fa-elementor"></i> Factura con timbre fiscal</li>
-          </ul>
-        </div>        
       </div>
     </div>
 
