--- a/siasoft/intro.html
+++ b/siasoft/intro.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
-<body>
+<body class="body2">
      
       <div class="wrapper">
            
