Se agregó la imagen de fondo a todas las páginas

--- a/siasoft/descargas.html
+++ b/siasoft/descargas.html
@@ -16,7 +16,7 @@
       ul li { padding-left: 2%; }
     </style>
   </head>
-  <body>
+  <body class="body2">
     
     <!-- Barra de navegación principal -->
      <nav>
