--- a/siasoft/productos.html
+++ b/siasoft/productos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/productos.css" />
   </head>
-  <body>
+  <body class="body2">
     
     <!-- Barra de navegación principal -->
      <nav>
