--- a/siasoft/sicoes.html
+++ b/siasoft/sicoes.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/producto.css" />
   </head>
-  <body>
+  <body class="body2">
     
     <!-- Barra de navegación principal -->
     <nav>
